--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@kellyjesse881/empty",
-  "version": "0.0.4",
-  "description": "",
+  "name": "effect-yaml",
+  "version": "0.0.1",
+  "description": "Effect-ts utils for working with yaml",
   "private": false,
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -39,6 +39,13 @@
     "plop": "^4.0.0",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2",
-    "vitest": "^0.34.2"
+    "vitest": "^0.34.6"
+  },
+  "dependencies": {
+    "yaml": "^2.3.4"
+  },
+  "peerDependencies": {
+    "@effect/schema": "^0.47.3",
+    "effect": "2.0.0-next.54"
   }
 }
