--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
     "@effect/docgen": "^0.2.1",
+    "@effect/schema": "^0.47.3",
     "@types/node": "^20.8.4",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "bun": "^1.0.7",
+    "effect": "2.0.0-next.54",
     "eslint": "^8.51.0",
     "eslint-plugin-deprecation": "^2.0.0",
     "husky": "^8.0.3",
