--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "bun": "^1.0.7",
-    "effect": "2.0.0-next.54",
+    "effect": "^3.5.3",
     "eslint": "^8.51.0",
     "eslint-plugin-deprecation": "^2.0.0",
     "husky": "^8.0.3",
@@ -48,6 +48,6 @@
   },
   "peerDependencies": {
     "@effect/schema": "^0.47.3",
-    "effect": "2.0.0-next.54"
+    "effect": "^3.0.0"
   }
 }
